--- a/app/src/main/res/layout/fragment_verify.xml
+++ b/app/src/main/res/layout/fragment_verify.xml
@@ -25,8 +25,8 @@
             android:layout_marginEnd="5dp"
             android:layout_gravity="center_vertical|start"
             android:scaleType="centerInside"
-            android:src="@drawable/account_address"
-            android:contentDescription="手机号" />
+            android:src="@drawable/account_name"
+            android:contentDescription="用户名" />
 
         <View
             android:layout_width="2dp"
@@ -42,16 +42,15 @@
             android:layout_gravity="center_vertical|start"
             android:layout_marginLeft="48dp"
             android:layout_marginStart="48dp"
-            android:hint="请输入您的地址">
+            android:hint="请输入用户名">
             
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/verify_address"
+                android:id="@+id/verify_name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:singleLine="true"
                 android:textSize="@dimen/font_normal"
                 android:textColor="@color/font_title"
-                android:inputType="phone"
                 android:gravity="center_vertical"
                 android:background="@android:color/transparent"
                 android:imeOptions="actionNext"
@@ -105,7 +104,7 @@
                 android:singleLine="true"
                 android:textSize="@dimen/font_normal"
                 android:textColor="@color/font_title"
-                android:inputType="textPassword"
+                android:inputType="phone"
                 android:gravity="center_vertical"
                 android:background="@android:color/transparent" />
         </android.support.design.widget.TextInputLayout>
