--- a/app/src/main/res/layout/fragment_verify.xml
+++ b/app/src/main/res/layout/fragment_verify.xml
@@ -10,6 +10,7 @@
         android:background="@color/border_block" />
 
     <FrameLayout
+        android:id="@+id/verify_name_layout"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@android:color/white"
@@ -60,56 +61,119 @@
 
     </FrameLayout>
 
-    <View
-        android:layout_width="34dp"
-        android:layout_height="1dp"
-        android:background="@android:color/white" />
-
-    <FrameLayout
+    <LinearLayout
+        android:id="@+id/mobile_layout"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@android:color/white">
-
-        <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_gravity="center_vertical|start"
-            android:scaleType="centerInside"
-            android:src="@drawable/account_phone"
-            android:contentDescription="密码" />
-
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
         <View
-            android:layout_width="2dp"
-            android:layout_height="18dp"
-            android:layout_gravity="center_vertical|start"
-            android:layout_marginLeft="34dp"
-            android:layout_marginStart="34dp"
-            android:background="@color/divider" />
+            android:layout_width="34dp"
+            android:layout_height="1dp"
+            android:background="@android:color/white" />
 
-        <android.support.design.widget.TextInputLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:layout_gravity="center_vertical|start"
-            android:layout_marginLeft="48dp"
-            android:layout_marginStart="48dp"
-            android:hint="请输入您的手机号码">
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/verify_mobile"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:singleLine="true"
-                android:textSize="@dimen/font_normal"
-                android:textColor="@color/font_title"
-                android:inputType="phone"
-                android:gravity="center_vertical"
-                android:background="@android:color/transparent" />
-        </android.support.design.widget.TextInputLayout>
+            android:layout_height="50dp"
+            android:background="@android:color/white">
 
-    </FrameLayout>
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_gravity="center_vertical|start"
+                android:scaleType="centerInside"
+                android:src="@drawable/account_phone"
+                android:contentDescription="密码" />
+
+            <View
+                android:layout_width="2dp"
+                android:layout_height="18dp"
+                android:layout_gravity="center_vertical|start"
+                android:layout_marginLeft="34dp"
+                android:layout_marginStart="34dp"
+                android:background="@color/divider" />
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:layout_gravity="center_vertical|start"
+                android:layout_marginLeft="48dp"
+                android:layout_marginStart="48dp"
+                android:hint="请输入您的手机号码">
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/verify_mobile"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:singleLine="true"
+                    android:textSize="@dimen/font_normal"
+                    android:textColor="@color/font_title"
+                    android:inputType="phone"
+                    android:gravity="center_vertical"
+                    android:background="@android:color/transparent" />
+            </android.support.design.widget.TextInputLayout>
+
+        </FrameLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/old_psw_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <View
+            android:layout_width="34dp"
+            android:layout_height="1dp"
+            android:background="@android:color/white" />
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@android:color/white">
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_gravity="center_vertical|start"
+                android:scaleType="centerInside"
+                android:src="@drawable/account_password"
+                android:contentDescription="老密码" />
+
+            <View
+                android:layout_width="2dp"
+                android:layout_height="18dp"
+                android:layout_gravity="center_vertical|start"
+                android:layout_marginLeft="34dp"
+                android:layout_marginStart="34dp"
+                android:background="@color/divider" />
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:layout_gravity="center_vertical|start"
+                android:layout_marginLeft="48dp"
+                android:layout_marginStart="48dp"
+                android:hint="请输入您的密码">
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/account_old_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:singleLine="true"
+                    android:textSize="@dimen/font_normal"
+                    android:textColor="@color/font_title"
+                    android:inputType="textPassword"
+                    android:gravity="center_vertical"
+                    android:background="@android:color/transparent" />
+            </android.support.design.widget.TextInputLayout>
+
+        </FrameLayout>
+    </LinearLayout>
 
     <View
         android:layout_width="34dp"
