--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="padding_normal">10dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="margin_block">15dp</dimen>
     <dimen name="margin_block_10">10dp</dimen>
@@ -20,4 +21,6 @@
     <dimen name="font_normal">14sp</dimen>
     <dimen name="font_small">12sp</dimen>
     <dimen name="font_tiny">10sp</dimen>
+
+    <dimen name="size_thumbnail">100dp</dimen>
 </resources>
