--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,4 +23,6 @@
     <dimen name="font_tiny">10sp</dimen>
 
     <dimen name="size_thumbnail">100dp</dimen>
+    <dimen name="size_thumbnail_small">40dp</dimen>
+    <dimen name="offset_progress">40dp</dimen>
 </resources>
