--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -5,15 +5,16 @@
 
     <ImageView
         android:id="@+id/btn_add"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/size_thumbnail"
         android:src="@drawable/photo_add"
         android:layout_margin="7dp"/>
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/size_thumbnail"
+        android:scaleType="centerCrop"
         android:layout_margin="7dp"/>
 
     <ImageView
