--- a/app/src/main/res/layout/vp_image.xml
+++ b/app/src/main/res/layout/vp_image.xml
@@ -3,10 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <zhulei.com.stone.widget.RecyclerImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerInside"/>
+        android:background="@android:color/black"
+        android:scaleType="fitCenter"/>
 
 </LinearLayout>
