大图显示主题更新

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="dark_beige">#B09366</color>
 
     <color name="color_aaa">#AAA</color>
+    <color name="translucent">#00ffffff</color>
 </resources>
