--- a/app/src/main/res/layout/fragment_comment.xml
+++ b/app/src/main/res/layout/fragment_comment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/divider">
@@ -42,7 +42,7 @@
         android:layout_height="45dp"
         android:orientation="horizontal"
         android:background="@android:color/white"
-        android:layout_alignParentBottom="true">
+        android:layout_gravity="bottom">
 
         <EditText
             android:id="@+id/comment_content"
@@ -61,4 +61,4 @@
 
     </LinearLayout>
 
-</RelativeLayout>
+</FrameLayout>
