change acitonbar to toolbar

--- a/app/src/main/res/layout/activity_paint.xml
+++ b/app/src/main/res/layout/activity_paint.xml
@@ -4,6 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <include layout="@layout/toolbar_layout"/>
+
     <zhulei.com.stone.widget.PaintView
         android:id="@+id/paint_view"
         android:layout_width="match_parent"
