--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -3,13 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@android:color/white"
-    android:padding="@dimen/padding_normal">
+    android:background="@android:color/white">
+
+    <include layout="@layout/toolbar_layout"/>
 
     <EditText
         android:id="@+id/et_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:gravity="start"
         android:minHeight="100dp"
         android:maxLines="5"
@@ -22,7 +24,7 @@
 
     <GridView
         android:id="@+id/grid_image"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:numColumns="3">
