--- a/app/src/main/res/layout/fragment_verify.xml
+++ b/app/src/main/res/layout/fragment_verify.xml
@@ -3,6 +3,8 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <include layout="@layout/toolbar_layout"/>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
