--- a/app/src/main/res/layout/fragment_birthday_setting.xml
+++ b/app/src/main/res/layout/fragment_birthday_setting.xml
@@ -4,10 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include layout="@layout/toolbar_layout"/>
+
     <TextView
         android:id="@+id/tv_title1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/toolbar"
         android:layout_marginTop="40dp"
         android:textSize="@dimen/font_title"
         android:textColor="@color/font_title"
