--- a/app/src/main/res/layout/fragment_circle.xml
+++ b/app/src/main/res/layout/fragment_circle.xml
@@ -5,6 +5,8 @@
     android:background="@color/translucent"
     android:orientation="vertical">
 
+    <include layout="@layout/toolbar_layout"/>
+
     <zhulei.com.stone.widget.CircleView
         android:id="@+id/nav_circle"
         android:layout_width="match_parent"
