--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,6 +22,8 @@
     <dimen name="font_small">12sp</dimen>
     <dimen name="font_tiny">10sp</dimen>
 
+    <dimen name="actionbar_height">50dp</dimen>
+
     <dimen name="size_thumbnail">40dp</dimen>
     <dimen name="size_thumbnail_middle">80dp</dimen>
     <dimen name="size_thumbnail_large">120dp</dimen>
