--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
+    <group android:checkableBehavior="none">
         <item
             android:id="@+id/nav_circle"
             android:icon="@drawable/ic_menu_circle"
@@ -9,15 +9,15 @@
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="画板" />
+            android:title="@string/paint" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/personal_post"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="@string/personal_post" />
         <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/ic_menu_manage"
-            android:title="个人中心" />
+            android:title="@string/profile" />
     </group>
 
     <item android:title="@string/account_info">
