--- a/app/src/main/res/layout/activity_paint.xml
+++ b/app/src/main/res/layout/activity_paint.xml
@@ -6,7 +6,7 @@
 
     <include layout="@layout/toolbar_layout"/>
 
-    <zhulei.com.stone.widget.PaintView
+    <zhulei.com.stone.ui.widget.PaintView
         android:id="@+id/paint_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
