--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,7 +15,7 @@
         android:gravity="center_horizontal"
         android:padding="10dp">
 
-        <zhulei.com.stone.widget.CircleImageView
+        <zhulei.com.stone.ui.widget.CircleImageView
             android:id="@+id/iv_header"
             android:layout_width="@dimen/header_with"
             android:layout_height="@dimen/header_height"
