--- a/app/src/main/res/layout/item_image_main.xml
+++ b/app/src/main/res/layout/item_image_main.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center">
-    <zhulei.com.stone.widget.RecyclerImageView
+    <zhulei.com.stone.ui.widget.RecyclerImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
