--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -12,7 +12,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <zhulei.com.stone.widget.CircleImageView
+    <zhulei.com.stone.ui.widget.CircleImageView
         android:id="@+id/user_header"
         android:layout_width="@dimen/header_with_70"
         android:layout_height="@dimen/header_height_70"
